# src/main/java/gmky/core/web/rest/v1/UserResource.java
@@ -2,9 +2,12 @@ package gmky.core.web.rest.v1;
 
 import gmky.core.aop.FeatureFlag;
 import gmky.core.api.UserClientApi;
+import gmky.core.api.model.CreateUserRequest;
+import gmky.core.api.model.FilterUserResponse;
 import gmky.core.api.model.SummaryItemDto;
 import gmky.core.api.model.UpdateUserRequest;
 import gmky.core.dto.ProfileDto;
+import gmky.core.dto.RoleDto;
 import gmky.core.enumeration.UserStatusEnum;
 import gmky.core.service.UserService;
 import lombok.RequiredArgsConstructor;
@@ -17,7 +20,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.List;
 
 import static gmky.core.common.Constants.FF_AUTH_PROFILE;
-import static gmky.core.utils.ResponseUtil.data;
+import static gmky.core.utils.ResponseUtil.*;
 
 @Slf4j
 @RestController
@@ -26,9 +29,16 @@ public class UserResource implements UserClientApi {
     private final UserService userService;
 
     @Override
+    @PreAuthorize("hasAuthority('user:create')")
+    public ResponseEntity<Void> createUser(CreateUserRequest createUserRequest) {
+        userService.createUser(createUserRequest);
+        return created();
+    }
+
+    @Override
     @FeatureFlag(FF_AUTH_PROFILE)
-    @PreAuthorize("hasAnyAuthority('profile:view')")
-    public ResponseEntity<List<ProfileDto>> filterUsers(String username, String email, String fullName, List<UserStatusEnum> status, Pageable pageable) {
+    @PreAuthorize("hasAnyAuthority('user:view')")
+    public ResponseEntity<FilterUserResponse> filterUsers(String username, String email, String fullName, List<UserStatusEnum> status, Pageable pageable) {
         var page = userService.filterUsers(username, email, fullName, status, pageable);
         return data(page);
     }
@@ -39,6 +49,19 @@ public class UserResource implements UserClientApi {
     public ResponseEntity<ProfileDto> getUserDetailById(String userId) {
         var result = userService.getProfileByUserId(userId);
         return data(result);
+    }
+
+    @Override
+    @PreAuthorize("hasAuthority('user:view')")
+    public ResponseEntity<List<RoleDto>> getUserRole(String userId) {
+        return data(userService.getAssignedRoleByUserId(userId));
+    }
+
+    @Override
+    @PreAuthorize("hasAuthority('user:edit')")
+    public ResponseEntity<Void> logoutAllByUserId(String userId) {
+        userService.logout(userId);
+        return noContent();
     }
 
     @Override
